# EzDL

./: .gitignore  README.md  debug.py  main.py  manip.yaml  pyproject.toml  setup.py
examples/: cifar10.py  parameters.yaml  parameters_optim.yaml
ezdl/: __main__.py  callbacks.py  cli.py  complexity.py  data.py  ezdl.py  loss.py  metrics.py  preprocessing.py  scheduler.py  transforms.py  wandb_manip.py
ezdl/api/: server.py
ezdl/app/: dash.py  dashcli.py  gui.py  guicli.py  inference.py  logged_experiment  logged_experiment.py  markdown.py  utils.py
ezdl/callbacks/: __init__.py  detection.py  metrics.py  scheduler.py  segmentation.py
ezdl/data/: __init__.py  augment.py  calculate_mean_std.py  sequoia.py
ezdl/datasets/: __init__.py
ezdl/datasets/weedmap/: weedmap.py
ezdl/experiment/: experiment.py  ez_trainer.py  kd_ez_trainer.py  kd_seg_trainer.py  parameters.py  resume.py  run.py  seg_trainer.py
ezdl/learning/: __init__.py  basesg_logger.py  clearml_logger.py  seg_trainer.py  wandb_logger.py
ezdl/logger/: __init__.py  basesg_logger.py  clearml_logger.py  text_logger.py  wandb_logger.py
ezdl/models/: __init__.py  base.py  bisenetv1.py  bisenetv2.py  custom_cnn.py  custom_vit.py  deeplab.py  dummy.py  lawin.py  regseg.py  segformer.py  sfnet.py
ezdl/models/backbones/: convnext.py  mit.py  poolformer.py  pvt.py  rest.py  uniformer.py
ezdl/models/heads/: condnet.py  fapn.py  fcn.py  fpn.py  lawin.py  sfnet.py  upernet.py
ezdl/models/kd/: feature.py  logits.py
ezdl/utils/: folders.py  grid.py  optuna.py  segmentation.py  sg.py  utilities.py
(+1 files in other folders)
