[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezdl"
version = "0.0.1"
description = "A simple tool to simplify deep learning projects"
readme = "README.md"
authors = [{ name = "Pasquale De Marinis", email = "pas.demarinis@gmail.com" }]license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["deep learning", "neural networks"]
dependencies = [
    "matplotlib",
    "numpy",
    "opencv-python",
    "Pillow",
    "ruamel.yaml",
    "scipy",
    "super-gradients",
    "torch",
    "torchaudio",
    "torchmetrics",
    "torchvision",
    "tqdm",
    "wandb",
    "transformers",
    "einops",
    "gradio",
    "easydict",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/pasqualedem/ezdl"

[project.scripts]
realpython = "ezdl.__main__:main"
